Combine ESB and BLE.

--- a/pca10028/s130/armgcc/Makefile
+++ b/pca10028/s130/armgcc/Makefile
@@ -58,12 +58,16 @@ $(abspath $(SDK_ROOT)/components/drivers_nrf/timer/nrf_drv_timer.c) \
 $(abspath $(SDK_ROOT)/components/drivers_nrf/clock/nrf_drv_clock.c) \
 $(abspath $(SDK_ROOT)/components/libraries/timer/app_timer.c) \
 $(abspath ../../../main_ble.c) \
+$(abspath ../../../main.c) \
 $(abspath ../../../motors.c) \
 $(abspath ../../../battery.c) \
 $(abspath ../../../lights.c) \
 $(abspath ../../../ws2812b-nrf51.c) \
 $(abspath ../../../ble_car.c) \
 $(abspath ../../../ultrasound.c) \
+$(abspath ../../../car_esb.c) \
+$(abspath ../../../switch.c) \
+$(abspath ../../../components/properitary_rf/esb/nrf_esb.c) \
 $(abspath $(SDK_ROOT)/components/ble/common/ble_advdata.c) \
 $(abspath $(SDK_ROOT)/components/ble/ble_advertising/ble_advertising.c) \
 $(abspath $(SDK_ROOT)/components/ble/common/ble_conn_params.c) \
@@ -80,6 +84,7 @@ LIBS  = -lm
 
 #includes common to all targets
 INC_PATHS  = -I$(abspath ../../../config)
+INC_PATHS += -I$(abspath ../../../components/properitary_rf/esb)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/libraries/util)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/pstorage)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/toolchain/gcc)
@@ -98,7 +103,7 @@ INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/gpiote)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/uart)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/timer)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/ppi)
-#INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/rtc)
+INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/rtc)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/drivers_nrf/clock)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/libraries/uart)
 INC_PATHS += -I$(abspath $(SDK_ROOT)/components/device)
@@ -119,6 +124,7 @@ BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LIS
 
 #flags common to all targets
 CFLAGS  = -DBOARD_PCA10028
+#CFLAGS  = -DESB_PRESENT
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DNRF51
 CFLAGS += -DS130
