--- a/car_remote/pca10028/s130/armgcc/Makefile
+++ b/car_remote/pca10028/s130/armgcc/Makefile
@@ -22,8 +22,10 @@ SRC_FILES += \
   $(SDK_ROOT)/components/drivers_nrf/clock/nrf_drv_clock.c \
   $(SDK_ROOT)/components/drivers_nrf/common/nrf_drv_common.c \
   $(SDK_ROOT)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
+  $(SDK_ROOT)/components/drivers_nrf/hal/nrf_adc.c \
   $(PROJ_DIR)/main.c \
   $(PROJ_DIR)/ble_car_c.c \
+  $(PROJ_DIR)/input.c \
   $(SDK_ROOT)/external/segger_rtt/RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
