--- a/car_remote/pca10028/s130/armgcc/Makefile
+++ b/car_remote/pca10028/s130/armgcc/Makefile
@@ -26,6 +26,7 @@ SRC_FILES += \
   $(PROJ_DIR)/main.c \
   $(PROJ_DIR)/ble_car_c.c \
   $(PROJ_DIR)/input.c \
+  $(PROJ_DIR)/leds.c \
   $(SDK_ROOT)/external/segger_rtt/RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
